--- a/Lab9/index.html
+++ b/Lab9/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="roll" id="prueba"></div>
+
+    <div class="roll" id="populares"></div>
+
+    <script src="./Pelicula.js"></script>
+    <script src="./data.js"></script>
+    <script src="./index.js"></script>
+  </body>
 </html>
