--- a/Lab9/pruebaSCarruse.html
+++ b/Lab9/pruebaSCarruse.html
@@ -4,14 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="pruebaCarrusel.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>Netflix copy</title>
   </head>
   <body>
+    <div class="video">
+      <div class="menu">
+        <i class="bx bxs-user-pin"></i>
+        <a class="link">Tv shows</a>
+        <a class="link">Movies</a>
+        <a class="link">Kids</a>
+      </div>
+      <div class="infopeli">
+        <h1 class="texto-margin-titulo">
+          Howl's moving castle
+          <i class="bx bxs-star tama"></i><i class="bx bxs-star tama"></i
+          ><i class="bx bxs-star tama"></i><i class="bx bxs-star tama"></i
+          ><i class="bx bx-star tama"></i>
+        </h1>
+        <h3 class="texto-margin">
+          Sophie, a young milliner and eldest of three sisters, encounters a
+          wizard named Howl on her way to visit her sister Lettie. Upon
+          returning home, she meets the Witch of the Waste, who transforms her
+          into a 90-year-old woman. Seeking to break the curse, Sophie leaves
+          home and sets off through the countryside. (PG 13)
+        </h3>
+        <div class="botones-box">
+          <button class="botones">
+            <i class="bx bx-play icon" style="color: #000000"></i>Play
+          </button>
+          <button class="botones">
+            Save <i class="bx bxs-bookmark-star"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="fondo-gris-nuevo">
     <div class="wraper">
       <button class="btn-redondo izquierdo" type="button"><</button>
       <div class="contenedor-carrusel">
@@ -27,10 +60,17 @@
       </div>
       <button class="btn-redondo derecho2" type="button">></button>
     </div>
+    
+
+    <div class="final">
+      <h4 class="fin-txt">Terms of service</h4>
+      <h4 class="fin-txt">Social Media</h4>
+      <h4 class="fin-txt">Contact Us</h4>
+    </div>
 
     <script src="./data.js"></script>
     <script src="./Carrusel.js"></script>
-    <script src="pruebaCarrusel-class.js"></script>
+    <script src="Carrusel-pelicula.js"></script>
     <script src="./pruebaCarrusel.js"></script>
   </body>
 </html>
