--- a/Lab9/netflixclone.html
+++ b/Lab9/netflixclone.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="pruebaCarrusel.css" />
+    <link rel="stylesheet" href="carrusel.css" />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -69,8 +69,7 @@
     </div>
 
     <script src="./data.js"></script>
+    <script src="./Pelicula.js"></script>
     <script src="./Carrusel.js"></script>
-    <script src="Carrusel-pelicula.js"></script>
-    <script src="./pruebaCarrusel.js"></script>
   </body>
 </html>
